navbar gap issue frixed using py-0

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 
-.navbar {
-    margin-top: 0;
-    margin-bottom: 0;
+.cont {
+    margin: 0;
+    padding: 0;
+    gap: 0;
 }
 
 .jumbotron {
@@ -10,7 +11,6 @@
 }
 
 .jumbotron .container {
-    /*opacity: 0.5;*/
     text-align: end;
     width: 500px;
 }
